# pnl

./: .clang-format  .gitignore  .travis.yml  AUTHORS  BUGS  CHANGELOG.md  CMakeLists.txt  CMakeuser.incl.in  ChangeLog  FindPnl.cmake  INSTALL  LICENSE.txt  Make.incl  Makefile.am  Makeuser.incl.in  README  README.md  README.win32  TODO  aclocal.m4  appveyor.yml  autogen.sh  c.vim  compile.make  config.h.cmake  config.h.in  configure.ac  configure.in  create_am_makefile.sh  documentation.txt  extract-h.el  extract-h.sh  extract-h.vim  model-template.pl  myf2c  premia.pc.in  release-pnl.sh  search  size.sh  split_link.sh  (+4 more)
Src/: Makefile.am  Makefile.win32  config.h  configunix.h.in  configwin.h  configwin_specific.h  premia.c  premia_obj.c  premia_obj.h  src.vcproj
Src/include/: Makefile.am
Src/libpnl/: Makefile.am
examples/: .gitignore  CMakeLists.txt  Makefile.am  Makefile.mingw32  README  array_test.c  band_matrix_test.c  basis_test.c  bessel.m  bessel.sce  complex_bessel_test.sce  complex_test.c  complex_test.sce  cumulfunc_test.c  cumulfunc_test.sce  dft_test.c  fft_test.c  finance_function_test.c  gamma_test.sce  hmat_test.c  integration_test.c  lapack_test.c  laplace_test.c  list_test.c  main.c  mathtools_test.c  mathtools_test.sce  matrix_test.c  matrix_test.sce  mpibindings_test.c  ode_test.c  optim_intpoints_bfgs_test.c  optim_test.c  perm_test.c  random_test.c  real_bessel_test.sce  rng-mpi.c  root_test.c  saveload_test.c  solver_iterativ_test.c  (+10 more)
examples/Data/: A.txt  AB.txt  Acomplex.txt  Ax.txt  B.txt  C.txt  Test_PCmat  Test_mat  Test_mat_sym  alpha_AB_beta_C.txt  alpha_Ax_beta_y.txt  cumprod_A_c.txt  cumprod_A_r.txt  cumsum_A_c.txt  cumsum_A_r.txt  expAcomplex.txt  full_M.txt  kron_A_B.txt  matrix_test.sce  max_A_c.txt  max_A_r.txt  max_A_star.txt  min_A_c.txt  min_A_r.txt  min_A_star.txt  prod_A_c.txt  prod_A_r.txt  sort_A_c_d.txt  sort_A_c_d_index.txt  sort_A_c_i.txt  sort_A_c_i_index.txt  sort_A_r_d.txt  sort_A_r_d_index.txt  sort_A_r_i.txt  sort_A_r_i_index.txt  sparse_M.txt  sum_A_c.txt  sum_A_r.txt  tA.txt  tB.txt  (+2 more)
examples/Data_basis/: tensor_hyperbolic_deg_2_dim_5_q06.txt  tensor_hyperbolic_deg_3_dim_4_q06.txt  tensor_n15_dim_4.txt  tensor_n28_dim_5.txt  tensor_prod_deg_2_dim_5.txt  tensor_prod_deg_3_dim_5.txt  tensor_sum_deg_2_dim_5.txt  tensor_sum_deg_3_dim_4.txt
examples/Data_specfun/: .gitignore  Makefile  complex_bessel_test.m  expint_gsl.c  gamma_test.m  hyperg_gsl.c  real_bessel_test.m
src/: .gitignore  CMakeLists.txt  Makefile.am  Makefile.win32  PnlConfig.cmake.in  basis.c  cumulfunc.c  finance_function.c  infnan.c  integ.c  interpolation.c  laplace.c  libpnl.def  mainpage.h  object.c  pnl-mpi.def  pnl.def  pnl_complex.c  pnl_vect_template_filter.pl  roots.c
src/doc/: Makefile  libpnldoxy.rc
src/fft/: CMakeLists.txt  Makefile.am  fftpack.c  fftpack.h  fftpack_wrap.c  laplace.c  test.c
src/include/: Makefile.am  clapack.h  pnl_band_matrix.h  pnl_basis.h  pnl_cdf.h  pnl_complex.h  pnl_f2c.h  pnl_fft.h  pnl_finance.h  pnl_integration.h  pnl_internals.h  pnl_interpolation.h  pnl_laplace.h  pnl_linalg.h  pnl_linalgsolver.h  pnl_mathtools.h  pnl_matrix.h  pnl_matrix_complex.h  pnl_matrix_double.h  pnl_matrix_int.h  pnl_matrix_uint.h  pnl_matvect.h  pnl_mpi.h  pnl_object.h  pnl_optim_intpoints_bfgs.h  pnl_perm.h  pnl_random.h  pnl_root.h  pnl_specfun.h  pnl_templates_off.h  pnl_templates_on.h  pnl_tridiag_matrix.h  pnl_types.h  pnl_vector.h  pnl_vector_complex.h  pnl_vector_double.h  pnl_vector_int.h  pnl_vector_uint.h
src/interpol/: CMakeLists.txt  Makefile.am  basis.c  interpolation.c
src/libamos/: CMakeLists.txt  Makefile.am  README  amos.h  amos_wrappers.c  amos_wrappers.h  d1mach.c  dgamln.c  dlamch.c  fdump.c  pnl_d1mach.c  pnl_dlamch.c  zabs.c  zacai.c  zacon.c  zairy.c  zasyi.c  zbesh.c  zbesi.c  zbesj.c  zbesk.c  zbesy.c  zbinu.c  zbiry.c  zbknu.c  zbuni.c  zkscl.c  zmlri.c  zrati.c  zs1s2.c  zseri.c  zsqrt.c  zunhj.c  zuni1.c  zuni2.c  zunik.c  zunk1.c  zunk2.c  zuoik.c  zwrsk.c
src/libblas/: CMakeLists.txt  Makefile.am  caxpy.c  ccopy.c  cdotc.c  cdotu.c  cgbmv.c  cgemm.c  cgemv.c  cgerc.c  cgeru.c  chbmv.c  chemm.c  chemv.c  cher.c  cher2.c  cher2k.c  cherk.c  chpmv.c  chpr.c  chpr2.c  crotg.c  cscal.c  csrot.c  csscal.c  cswap.c  csymm.c  csyr2k.c  csyrk.c  ctbmv.c  ctbsv.c  ctpmv.c  ctpsv.c  ctrmm.c  ctrmv.c  ctrsm.c  ctrsv.c  dasum.c  daxpy.c  dcabs1.c  (+112 more)
src/libcephes/: CMakeLists.txt  bdtr.c  beta.c  cbrt.c  cephes_protos.h  cephes_wrappers.c  chbevl.c  chdtr.c  const.c  ellie.c  ellpj.c  ellpk.c  expn.c  gamma.c  gdtr.c  gels.c  hyp2f1.c  hyperg.c  igam.c  igami.c  incbet.c  j1.c  jv.c  mconf.h  mmmpy.c  mtherr.c  mtransp.c  nbdtr.c  ndtr.c  ndtri.c  pnl_names.h  polevl.c  polmisc.c  polrt.c  polyn.c  psi.c  round.c  scipy_iv.c  setprec.c  simpsn.c  (+7 more)
src/libf2c/: CMakeLists.txt  F77_aloc.c  Makefile.am  README  Version.c  abort_.c  backspace.c  c_abs.c  c_cos.c  c_div.c  c_exp.c  c_log.c  c_sin.c  c_sqrt.c  close.c  d_abs.c  d_acos.c  d_asin.c  d_atan.c  d_atn2.c  d_cnjg.c  d_cos.c  d_cosh.c  d_dim.c  d_exp.c  d_imag.c  d_int.c  d_lg10.c  d_log.c  d_mod.c  d_nint.c  d_prod.c  d_sign.c  d_sin.c  d_sinh.c  d_sqrt.c  d_tan.c  d_tanh.c  derf_.c  derfc_.c  (+115 more)
src/libfftpack/: documentation.txt  license.txt
src/libinteg/: CMakeLists.txt  Makefile.am  README  basic_integ.c  integ.c  quadpack_dqage.c  quadpack_dqagie.c  quadpack_dqagpe.c  quadpack_dqagse.c  quadpack_dqawce.c  quadpack_dqawfe.c  quadpack_dqawoe.c  quadpack_dqc25c.c  quadpack_dqc25f.c  quadpack_dqc25s.c  quadpack_dqelg.c  quadpack_dqk15.c  quadpack_dqk15i.c  quadpack_dqk15w.c  quadpack_dqk21.c  quadpack_dqk31.c  quadpack_dqk41.c  quadpack_dqk51.c  quadpack_dqk61.c  quadpack_dqmomo.c  quadpack_dqng.c  quadpack_dqpsrt.c  quadpack_dqwgtc.c  quadpack_dqwgtf.c  rkf45.c
src/liblapack/: CMakeLists.txt  Makefile.am  cbdsqr.c  cgbbrd.c  cgbcon.c  cgbequ.c  cgbequb.c  cgbrfs.c  cgbrfsx.c  cgbsv.c  cgbsvx.c  cgbsvxx.c  cgbtf2.c  cgbtrf.c  cgbtrs.c  cgebak.c  cgebal.c  cgebd2.c  cgebrd.c  cgecon.c  cgeequ.c  cgeequb.c  cgees.c  cgeesx.c  cgeev.c  cgeevx.c  cgegs.c  cgegv.c  (+1566 more)
(+2432 files in other folders)
